--- a/client/src/routes/Operations/index.module.css
+++ b/client/src/routes/Operations/index.module.css
@@ -1,5 +1,16 @@
 .filters {
+  width: 100%;
+  padding: 0.5rem 1rem; 
+  margin-top: 3rem;
+  box-shadow: var(--shadow-lg);
+  border-bottom: 0.2rem solid rgba(var(--border, 1));
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 
+.filter-wrapper {
+  margin-bottom: 1rem;
 }
 
 .operations-cont {
